# careless-whisper

./: README.md  pyproject.toml
careless_whisper/configs/: config.yaml
careless_whisper/notebooks/: LibriSpeech.ipynb  eda_librispeech.ipynb  eda_overfit.ipynb  tinydiarize.ipynb
careless_whisper/scripts/: huggingface_transcription.py  lora_finetune.py
careless_whisper/utils/: data_processing.py  test_data_processing.py
